fix spacing mobile

--- a/styles/sciencefestival.css
+++ b/styles/sciencefestival.css
@@ -463,6 +463,7 @@ ul.project-lists-outcomes li::before { /*::before creates a pseudo-element that 
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    margin-top: 20px;
 }
 
 .project-image-box {
