--- a/styles/veganmile.css
+++ b/styles/veganmile.css
@@ -479,6 +479,7 @@ h2.reduce-margin {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    margin-top: 20px;
 }
 
 .project-image-box {
